shares unique pointer + vector

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,6 @@ add_subdirectory(src)
 
 add_executable(adelina_paoo src/main.cpp)
 
-target_link_libraries(adelina_paoo MainLibrary)
+target_link_libraries(adelina_paoo MainLib)
 
 include(CPack)
